fix message channel spacing

--- a/orbit_source.css
+++ b/orbit_source.css
@@ -2389,7 +2389,7 @@ Stream background removal
 .placeholder-37qJjk {
     color: #fff;
     opacity: 0.4;
-    left: 25px;
+    left: 30px;
 }
 .live-vBWnV6.da-live.liveSmall-1dy2uA.textBadge-1iylP6.base-PmTxvP.da-textBadge.da-base
 {
